# seamonkey

./: .editorconfig  .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: cli.rs  install.rs  main.rs  record.rs  uninstall.rs  update.rs
gtk/: Cargo.toml
gtk/src/: main.rs
